# aiosql

./: .buildinfo  .gitignore  404.html  Taskfile  aiosql.py  defining_queries.html  dev.in  dev.txt  driver_adapters.html  genindex.html  getting_started.html  index.html  install.html  pasql.py  py-modindex.html  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  sync_vs_async.html  upgrading.html
advanced-topics/: index.html
aiosql/: __init__.py  aiosql.py  asyncpg.py  exceptions.py  queries.py  query_loader.py  types.py
api/: index.html
database-driver-adapters/: index.html
defining-sql-queries/: index.html
example/: example.py
getting-started/: index.html
search/: search_index.json
source/: aiosql.adapters.aiosqlite.html  aiosql.adapters.asyncpg.html  aiosql.adapters.html  aiosql.adapters.psycopg2.html  aiosql.adapters.sqlite3.html  aiosql.aioctxlib.html  aiosql.aiosql.html  aiosql.exceptions.html  aiosql.html  aiosql.patterns.html  aiosql.queries.html  aiosql.query_loader.html  aiosql.types.html  modules.html
tests/: conftest.py  test_aiosqlite.py  test_asyncpg.py  test_loading.py  test_patterns.py  test_psycopg2.py  test_sqlite3.py
