[metadata]
name = apg
version = 1.0.0

[options]
packages = find:
python_requires = >=3.7


[flake8]
ignore = E501,B008,E266
exclude = .git,__pycache__,docs/*,old,build,dist,__init__.py,setup.py,.tox,.ipynb_checkpoints/*,.tox,*.egg,.mypy_cache,.pytest_cache
enable-extensions = G
max-line-length = 120

[pydocstyle]
ignore = D202,D212,D203,D103

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_reexport = True
plugins = pydantic.mypy, sqlmypy
strict_optional = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[tool:isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = autoderm,tests
known_third_party = PIL,aiofiles,app,azure,databases,fastapi,httpx,huey,itsdangerous,jose,numpy,passlib,pydantic,pytest,requests,setuptools,shortuuid,sqlalchemy,starlette,telegram,tenacity,yara
line_length = 88
multi_line_output = 3
